@startuml
'https://plantuml.com/class-diagram


class User {
    + userId : String
    + username : String
    + password : String
}

class Meal {
    + mealId : String
    + name : String
    + category : String
    + area : String
    + instructions : String
    + imageUrl : String
}

class Workout {
    + workoutId : String
    + name : String
    + category : String
    + description : String
}

class Ingredient {
    + ingredientName : String
}

class MealLog {
    + logId : String
    + date : Date
}

class WorkoutLog {
    + logId : String
    + date : Date
}

class MealService {
    + fetchRandomMeal() : Meal
    + saveMeal(Meal) : void
}

class WorkoutService {
    + fetchRandomWorkout() : Workout
    + saveWorkout(Workout) : void
}

class MealController {
    + getMealById(id: String) : Meal
    + addMeal(Meal) : void
}

class WorkoutController {
    + getWorkoutById(id: String) : Workout
    + addWorkout(Workout) : void
}

User "1" -- "0..*" MealLog : logs
User "1" -- "0..*" WorkoutLog : logs
Meal "1" -- "0..*" Ingredient : contains
MealLog "1" -- "1" Meal : refers to
WorkoutLog "1" -- "1" Workout : refers to

MealController --> MealService
WorkoutController --> WorkoutService
MealService --> Meal
WorkoutService --> Workout
@enduml
